# terminology-service

./: .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
terminology_service/: asgi.py  settings.py  urls.py  views.py  wsgi.py
terminology_service/templates/form/: info.html
terminology_service/templates/terminology_service/: base.html  index.html
terminology_service/terminology_dbms/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
terminology_service/terminology_dbms/migrations/: 0001_initial.py  0002_directory_start_date.py  0003_auto_20211226_1123.py  0004_auto_20211226_1144.py
