[tool.poetry]
name = "terminology_service"
version = "0.1.0"
description = ""
authors = ["BasedOnEvidence <TestTypoTest@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.8"
django = "^3.2.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
