[tool.poetry]
name = "terminology_service"
version = "0.1.0"
description = ""
authors = ["BasedOnEvidence <TestTypoTest@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.8"
django = "^3.2.9"
djangorestframework = "^3.13.1"
django-rename-app = "^0.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
